Adds content images and brands on home page.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
       <div class="slider-wrapper">
         <div class="slider-element">
-          <img src="#" alt="монопод для селфи" height="" width="">
+          <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486">
           <h2 class="slider-title">Делай селфи, как Бен Стиллер!</h2>
           <p class="slider-el-description">
             Самая длянная палка для селфи доступна в нашем магазине.
@@ -62,7 +62,7 @@
           </table>
         </div>
         <div class="slider-element">
-          <img src="#" alt="фитнес-браслет" vheight="" width="">
+          <img src="img/index/slider/slider-2.png" alt="фитнес-браслет" width="345" height="485">
           <h2 class="slider-title">Худеем правильно!</h2>
           <p class="slider-el-description">
             Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия
@@ -83,7 +83,7 @@
           </table>
         </div>
         <div class="slider-element">
-          <img src="#" alt="квадрокоптер" height="" width="">
+          <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334">
           <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
           <p class="slider-el-description">
             Этот обычный, на первый взгляд, квадрокоптер оснащён мощным лазером,
@@ -155,16 +155,16 @@
       </section>
       <section class="brands">
         <a href="#" class="brand-logo">
-          <img src="#" alt="DJI" height="" wdith="">
+          <img src="img/index/brands/dji.png" alt="DJI" width="260" height="100">
         </a>
         <a href="#" class="brand-logo">
-          <img src="#" alt="SP Gadgets" height="" wdith="">
+          <img src="img/index/brands/sp-gadgets.png" alt="SP Gadgets" width="260" height="100">
         </a>
         <a href="#" class="brand-logo">
-          <img src="#" alt="GoPro" height="" wdith="">
+          <img src="img/index/brands/gopro.png" alt="GoPro" width="260" height="100">
         </a>
         <a href="#" class="brand-logo">
-          <img src="#" alt="HTC Vive" height="" wdith="">
+          <img src="img/index/brands/vive.png" alt="HTC Vive" width="260" height="100">
         </a>
       </section>
       <section class="about-us">
@@ -185,7 +185,7 @@
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
           проверить работоспособность покупки. Всякое бывает.</p>
         <a href="#" class="map-link">
-          <img src="#" alt="карта проезда" height="" wdith="">
+          <img src="img/index/map.png" alt="карта проезда" width="560" height="222">
         </a>
         <a href="#" class="link-btn">напишите нам</a>
       </section>
@@ -221,7 +221,7 @@
         <input type="email" id="email" name="email" placeholder="email@example.com">
         <label for="message">Текст письма:</label>
         <textarea name="message" id="message" placeholder="В свободной форме"></textarea>
-        <button type="submit">отправить</button>
+        <button type="submit" class="link-btn">отправить</button>
         <button type="button" class="close"></button>
       </form>
     </section>
