Adds content images for items in catalog page.

--- a/catalog.html
+++ b/catalog.html
@@ -86,7 +86,7 @@
     </section>
     <section class="goods">
       <article class="good-item">
-        <img src="#">
+        <img src="img/catalog/goods/sst-common.png" alt="любительская селфи-палка" width="360" height="380">
         <h4>Любительская селфи-палка</h4>
         <p>500 руб</p>
         <div class="good-hover-actions">
@@ -95,7 +95,7 @@
         </div>
       </article>
       <article class="good-item">
-        <img src="#">
+        <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи-палка" width="360" height="380">
         <h4>Профессиональная селфи-палка</h4>
         <p>1&nbsp;500 руб</p>
         <div class="good-hover-actions">
@@ -104,7 +104,7 @@
         </div>
       </article>
       <article class="good-item">
-        <img src="#">
+        <img src="img/catalog/goods/sst-waterprot.png" alt="непотопляемая селфи-палка" width="360" height="380">
         <h4>Непотопляемая селфи-палка</h4>
         <p>2&nbsp;500 руб</p>
         <div class="good-hover-actions">
@@ -113,7 +113,7 @@
         </div>
       </article>
       <article class="good-item new-item">
-        <img src="#">
+        <img src="img/catalog/goods/" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
         <h4>Селфи-палка &laquo;Следуй за мной&raquo;</h4>
         <p>4&nbsp;900 руб</p>
         <div class="good-hover-actions">
