--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
       <a href="#" class="sort-attribute active-sort">По цене</a>
       <a href="#" class="sort-attribute">По типу</a>
       <a href="#" class="sort-attribute">По популярности</a>
-      <a href="#" class="sort-switch-btn up-switch"></a>
+      <a href="#" class="sort-switch-btn up-switch active-switch"></a>
       <a href="#" class="sort-switch-btn down-switch"></a>
     </section>
     <section class="goods">
