Adds class inner-content for main area and text in links and buttons

--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="inner-content">
     <h2>Моноподы для селфи</h2>
     <section class="shop-sections">
       <a href="#" class="shop-section">Главная</a>
