--- a/index.html
+++ b/index.html
@@ -127,20 +127,16 @@
           <dt class="btn-link"><a href="#">Доставка</a></dt>
           <dd class="service-desc">
             <h2>Доставка</h2>
-            <p>
-              Мы с удовольствием доставим ваш товар прямо к вашему подъезду
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду
               совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его
-              на ваш этаж.
-            </p>
+              на ваш этаж.</p>
           </dd>
           <dt class="btn-link"><a href="#">Гарантия</a></dt>
           <dd class="service-desc">
             <h2>Гарантия</h2>
-            <p>
-              Если из-за возгорания купленного у нас товара у вас сгорит
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит
               дом — не переживайте, мы выдадим вам новый. Товар, не дом,
-              конечно же.
-            </p>
+              конечно же.</p>
           </dd>
           <dt class="btn-link"><a href="#">Кредит</a></dt>
           <dd class="service-desc">
@@ -169,10 +165,14 @@
       </section>
       <section class="about-us">
         <h2>О нас</h2>
-        <p>Огромный выбор гаджетов не оставит равнодушным гика,
-        который есть в каждом из нас.</p>
-        <p>Мы можем доставить ваш товар в самые отдалённые точки
-        России! DEVICE работает со многими транспортными компаниями:</p>
+        <p>
+          Огромный выбор гаджетов не оставит равнодушным гика,
+          который есть в каждом из нас.
+        </p>
+        <p>
+          Мы можем доставить ваш товар в самые отдалённые точки
+          России! DEVICE работает со многими транспортными компаниями:
+        </p>
         <ul class="transport-list">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -206,9 +206,9 @@
       </div>
       <div class="footer-bottom">
         <section class="social">
-          <a href="https://ru-ru.facebook.com/htmlacademy/" target="_blank" class="social fb"></a>
-          <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social inst"></a>
-          <a href="https://twitter.com/htmlacademy_ru?lang=ru" target="_blank" class="social tw"></a>
+          <a href="https://ru-ru.facebook.com/htmlacademy/" target="_blank" class="social fb">Facebook</a>
+          <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social inst">Twitter</a>
+          <a href="https://twitter.com/htmlacademy_ru?lang=ru" target="_blank" class="social tw">Instagram</a>
         </section>
         <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" class="copyright"></a>
       </div>
@@ -222,7 +222,7 @@
         <label for="message">Текст письма:</label>
         <textarea name="message" id="message" placeholder="В свободной форме"></textarea>
         <button type="submit" class="link-btn">отправить</button>
-        <button type="button" class="close"></button>
+        <button type="button" class="close">закрыть</button>
       </form>
     </section>
     <section class="pop-up map"></section>
