Makes some code style fixes. Adds methods and actions to all forms. Adds aria-label to empty links in footer.

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <header class="site-header">
     <a href="#" class="logo">device</a>
     <div class="header-panel">
-      <form method="post" action="" class="header-panel-form">
+      <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
         <label for="search-field"></label>
         <input type="search" placeholder="Поиск по сайту" id="search-field" class="search-field">
         <input type="submit" value="Найти" class="search-btn">
@@ -45,7 +45,7 @@
     </section>
     <section class="filter">
       <h3>фильтр:</h3>
-      <form method="post">
+      <form method="get" action="https://echo.htmlacademy.ru/">
         <fieldset>
           <legend>Стоимость</legend>
           <div class="cost-range">
@@ -147,11 +147,11 @@
     </div>
     <div class="footer-bottom">
       <section class="social">
-        <a href="https://ru-ru.facebook.com/htmlacademy/" target="_blank" class="social fb"></a>
-        <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social inst"></a>
-        <a href="https://twitter.com/htmlacademy_ru?lang=ru" target="_blank" class="social tw"></a>
+        <a href="https://ru-ru.facebook.com/htmlacademy/" target="_blank" class="social fb" aria-label="Наше сообщество в Facebook"></a>
+        <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social inst" aria-label="Наши фотоотчёты в Instagram"></a>
+        <a href="https://twitter.com/htmlacademy_ru?lang=ru" target="_blank" class="social tw" aria-label="Читайте наши новости в Twitter"></a>
       </section>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" class="copyright"></a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" class="copyright" aria-label="Записывайтесь на интенсив по вёрстке!"></a>
     </div>
   </footer>
 </body>
