--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="site-header">
-      <a href="#" class="logo">device</a>
+      <a href="index.html" class="logo">device</a>
       <div class="header-panel">
         <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
           <input type="search" placeholder="Поиск по сайту" class="search-field">
@@ -18,7 +18,7 @@
       </div>
       <nav class="header-nav">
         <ul class="main-menu">
-          <li class="menu-item"><a href="#" class="menu-link">каталог товаров</a>
+          <li class="menu-item"><a href="catalog.html" class="menu-link">каталог товаров</a>
             <ul class="items-list">
               <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
               <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
@@ -198,7 +198,7 @@
     </main>
     <footer class="site-footer">
       <div class="footer-top">
-        <a href="#" class="logo">device</a>
+        <a href="index.html" class="logo">device</a>
         <a href="#" class="site-link logout">Войти</a>
         <a href="#" class="site-link compare">Сравнить</a>
         <a href="#" class="site-link basket">Корзина</a>
