A11LY MODE: ON. Adds hidden captions for sections.

--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
         </div>
       </article>
       <article class="good-item new-item">
-        <img src="img/catalog/goods/" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
+        <img src="img/catalog/goods/sst-followme.png" alt="селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
         <h4>Селфи-палка &laquo;Следуй за мной&raquo;</h4>
         <p>4&nbsp;900 руб</p>
         <div class="good-hover-actions">
@@ -147,6 +147,7 @@
     </div>
     <div class="footer-bottom">
       <section class="social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <a href="https://ru-ru.facebook.com/htmlacademy/" target="_blank" class="social fb" aria-label="Наше сообщество в Facebook"></a>
         <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social inst" aria-label="Наши фотоотчёты в Instagram"></a>
         <a href="https://twitter.com/htmlacademy_ru?lang=ru" target="_blank" class="social tw" aria-label="Читайте наши новости в Twitter"></a>
