First commit for styling.

--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>HTML Academy: Девайс</title>
-</head>
-<body>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
   <header class="site-header">
     <a href="index.html" class="logo">device</a>
     <div class="header-panel">
@@ -36,7 +39,7 @@
       </ul>
     </nav>
   </header>
-  <main class="inner-content">
+    <main class="inner-content">
     <h2>Моноподы для селфи</h2>
     <section class="shop-sections">
       <a href="index.html" class="shop-section">Главная</a>
@@ -130,7 +133,7 @@
       </nav>
     </section>
   </main>
-  <footer class="site-footer">
+    <footer class="site-footer">
     <div class="footer-top">
       <a href="index.html" class="logo">device</a>
       <a href="#" class="site-link login">Валентин Петухов</a>
