Changes some classes names and adds classes to all similar links

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <nav class="header-nav">
         <ul class="main-menu">
           <li class="menu-item"><a href="catalog.html" class="menu-link">каталог товаров</a>
-            <ul class="items-list">
-              <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
-              <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
-              <li class="catalog-item"><a href="#">Экшн-камеры</a></li>
-              <li class="catalog-item"><a href="#">Фитнес-браслеты</a></li>
-              <li class="catalog-item"><a href="#">Умные часы</a></li>
-              <li class="catalog-item"><a href="#">Квадрокоптеры</a></li>
+            <ul class="catalog-submenu">
+              <li class="catalog-item"><a href="#" class="site-link">Виртуальная реальность</a></li>
+              <li class="catalog-item"><a href="#" class="site-link">Моноподы для селфи</a></li>
+              <li class="catalog-item"><a href="#" class="site-link">Экшн-камеры</a></li>
+              <li class="catalog-item"><a href="#" class="site-link">Фитнес-браслеты</a></li>
+              <li class="catalog-item"><a href="#" class="site-link">Умные часы</a></li>
+              <li class="catalog-item"><a href="#" class="site-link">Квадрокоптеры</a></li>
             </ul>
           </li>
           <li class="menu-item"><a href="#" class="menu-link">доставка</a></li>
@@ -107,18 +107,18 @@
         </div>
       </div>
       <section class="categories">
-        <h2 class="visually-hidden">Категории товаров</h2>
-        <a href="#">Виртуальная реальность</a>
-        <a href="#">Моноподы для селфи</a>
-        <a href="#">Экшн-камеры</a>
-        <a href="#">Фитнес-браслеты</a>
-        <a href="#">Умные часы</a>
-        <a href="#">Квадрокоптеры</a>
+        <h2 class="visually-hidden">Популярные товаров</h2>
+        <a href="#" class="link-popular">Виртуальная реальность</a>
+        <a href="#" class="link-popular">Моноподы для селфи</a>
+        <a href="#" class="link-popular">Экшн-камеры</a>
+        <a href="#" class="link-popular">Фитнес-браслеты</a>
+        <a href="#" class="link-popular">Умные часы</a>
+        <a href="#" class="link-popular">Квадрокоптеры</a>
       </section>
       <section class="service">
         <h2 class="visually-hidden">Наши услуги</h2>
         <dl>
-          <dt class="btn-link"><a href="#">Доставка</a></dt>
+          <dt><a href="#" class="service-link">Доставка</a></dt>
           <dd class="service-desc">
             <h3>Доставка</h3>
             <p>
@@ -127,7 +127,7 @@
               на ваш этаж.
             </p>
           </dd>
-          <dt class="btn-link"><a href="#">Гарантия</a></dt>
+          <dt class="btn-link"><a href="#" class="service-link">Гарантия</a></dt>
           <dd class="service-desc">
             <h3>Гарантия</h3>
             <p>
@@ -136,7 +136,7 @@
               конечно же.
             </p>
           </dd>
-          <dt class="btn-link"><a href="#">Кредит</a></dt>
+          <dt class="btn-link"><a href="#" class="service-link">Кредит</a></dt>
           <dd class="service-desc">
             <h3>Кредит</h3>
             <p>
@@ -149,16 +149,16 @@
       </section>
       <section class="brands">
         <h2 class="visually-hidden">Бренды</h2>
-        <a href="#" class="brand-logo" aria-label="товары от DJI">
+        <a href="#" class="brand-link" aria-label="товары от DJI">
           <img src="img/index/brands/dji.png" alt="DJI" width="260" height="100">
         </a>
-        <a href="#" class="brand-logo" aria-label="товары от SP Gadgets">
+        <a href="#" class="brand-link" aria-label="товары от SP Gadgets">
           <img src="img/index/brands/sp-gadgets.png" alt="SP Gadgets" width="260" height="100">
         </a>
-        <a href="#" class="brand-logo" aria-label="товары от GoPro">
+        <a href="#" class="brand-link" aria-label="товары от GoPro">
           <img src="img/index/brands/gopro.png" alt="GoPro" width="260" height="100">
         </a>
-        <a href="#" class="brand-logo" aria-label="товары от HTC Vive">
+        <a href="#" class="brand-link" aria-label="товары от HTC Vive">
           <img src="img/index/brands/vive.png" alt="HTC Vive" width="260" height="100">
         </a>
       </section>
